Create simple single-view

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -21,9 +21,9 @@
             <h1 class="site-title">Car registry</h1>
         </div>
     </header>
-    <div class="container-fluid">
+    <main class="container-fluid">
         {{{body}}}
-    </div>
+    </main>
 </div>
 <script src="/js/scripts.js"></script>
 </body>
