--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,3 +1,10 @@
+/* Bootstrap overrides */
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    .container {
+        max-width: 800px;
+    }
+}
 
 /* Header  */
 #main-header {
