Add registration website

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -13,9 +13,9 @@
 
             <nav id="main-nav">
                 <ul class="nav nav-pills nav-center">
-                    <li><a href="#" title="Register"><span class="glyphicon glyphicon-pencil"></span></a></li>
-                    <li><a href="#" title="Random"><span class="glyphicon glyphicon-random"></span></a></li>
-                    <li><a href="#" title="Search"><span class="glyphicon glyphicon-search"></span></a></li>
+                    <li><a href="/register" title="Register"><span class="glyphicon glyphicon-pencil"></span></a></li>
+                    <li><a href="/" title="Random"><span class="glyphicon glyphicon-random"></span></a></li>
+                    <li><a href="/search" title="Search"><span class="glyphicon glyphicon-search"></span></a></li>
                 </ul>
             </nav>
             <h1 class="site-title">Car registry</h1>
