Fall back to a static JSON file for now
Figured out that it's more important to have something working than getting stuck with details

--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -20,7 +20,7 @@
                 <select class="form-control" name="model">
                     <option value="" disabled selected>Which model is it?</option>
                     {{#each models}}
-                        <option value="{{id}}">{{name}}</option>
+                        <option>{{this}}</option>
                     {{/each}}
                 </select>
             {{else}}
