--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <h2>Register your car</h2>
     <p class="lead">Want to register your car? No problem! </p>
-    <form id="registration-form" method="post" action="/registration">
+    <form id="registration-form" method="post" action="/register">
         <div class="form-group">
             {{#if years}}
                 <select class="form-control" name="year">
