Make the registration page say what kind of car it is

--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>Register your car</h2>
+    <h2>Register your {{brand}} {{modelName}}</h2>
     <p class="lead">Want to register your car? No problem! </p>
     <form id="registration-form" method="post" action="/register">
         <div class="form-group">
